# flash-moe

./: .gitignore  Cargo.toml  Makefile  README.md  REPORT.md  bench.py  bench_engine.py  chat.py  chat_rs.py  diagnose_divergence.py  diagnose_ops.py  diagnose_per_layer.py  example.py  prompt.txt  pyproject.toml  quantize.py  server.py  setup.py  verify_nway.py  vision_demo.py
helpers/: avail_models.py  (+8 more)
moe_infer_rs/: Cargo.toml  pyproject.toml
moe_infer_rs/moe_infer/: __init__.py
moe_infer_rs/src/: cache.rs  config.rs  constants.rs  cpu_forward.rs  embeddings.rs  engine.rs  engine_common.rs  engine_cpu.rs  engine_fusedexp.rs  engine_fusedwoods.rs  engine_gpu.rs  expert_io.rs  generate.rs  gpu_forward.rs  gpu_ops.rs  kernels.rs  lib.rs  main.rs  math.rs  math_util.rs  metal.rs  metal_context.rs  model.rs  pipeline_common.rs  pipeline_cpu.rs  pipeline_full.rs  pipeline_fused3.rs  pipeline_fusedexp.rs  pipeline_fusedwoods.rs  pipeline_gpu.rs  python_bindings.rs  quant.rs  quantize.rs  quantize_pipeline.rs  server.rs  tokenizer.rs  weights.rs
moe_infer_rs/src/engine/: cpu.rs  engine.rs  engine_cpu.rs  engine_fusedexp.rs  engine_fusedwoods.rs  engine_gpu.rs  fusedexp.rs  fusedwoods.rs  qwen35_moe.rs
moe_infer_rs/src/engine/qwen35_35b/: fusedexp.rs  fusedwoods.rs  mod.rs
moe_infer_rs/src/engine/qwen35_35b_stripped/: fusedexp.rs  fusedwoods.rs
moe_infer_rs/src/math/: full_attention.rs  linear_attention.rs  lm_head.rs  math.rs  moe.rs  sample.rs  util.rs
moe_infer_rs/src/metal_util/: context.rs
moe_infer_rs/src/model/: model.rs  model_config.rs  weights.rs
(+74 files in other folders)
